--- a/de12/test.html
+++ b/de12/test.html
@@ -11,11 +11,26 @@
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
+こんにちは<br>
+デザイン<br>
 
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
+<img src="./images/testimage.png" width=60%><br>
+<img src="./images/testimage.png" width=30%><br>
+<img src="../images/0_XBlogo.png" width=10%><br>
+<img src="../images/IMG_7114.jpg" width=10%><br>
+
 
          <!-- ③↓に箇条書きをしてみよう -->
-
+ <ol>
+    <li>あいうえお</li>
+    <li>かきくけこ</li>
+ </ol>
+ <ul>
+    <li>さしすせそ</li>
+    <li>たちつてと</li>
+ </ul>
+ 
          <!-- ④↓に外部リンクを作ってみよう -->
 
     </div>
