--- a/de12/2.html
+++ b/de12/2.html
@@ -2,6 +2,43 @@
 <html lang="jp">
 <head>
     <title>ゆうさく 路上観察</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>路上観察</h1>
+
+
+    <h2>1枚目</h2>
+    <h3>「マックが誘っている」</h3>
+    <img src="../images/IMG_7137.jpg" width="30%"><br>
+    皆さん大好きなマクドナルド。食べたことない人はおそらくいないでしょう。<br>
+    私がなぜこのマクドナルドの写真に注目したか。それはマクドナルドマークの横に「写真」がある点です。<br>
+    あくまで個人的な考えですが、私は普通のマクドナルドマークを見るよりもセットでポテトの写真があることで購買意欲がそそられ、よりポテトを求めてしまいます。<br>
+    ここから単に店の看板があるよりもプラスαで写真があることで食べているときの画が想像でき、購買意欲、食欲を向上させる効果があると発見することができました。<br>
+
+    <h2>2枚目</h2>
+    <h3>「何屋さん？」</h3>
+    <img src="../images/IMG_7138.jpg" width="30%"><br>
+    今回の課題のために近所を歩いていたところ発見しました。みなさんは、どう読んで、そして何屋さんだと思いますか？<br>
+    私は「こめやざいもくてん」と読み、米屋？材木店？どっち？どっちもやってる二刀流の店？のように考えていました。<br>
+    結局正解は、「よねやざいもくてん」と読み材木店であるということが調べて分かりました。<br>
+    もしかしたら自分のように何屋さんなのか分からず調べた人が多くいるかもと考えると、まんまと誘導されたなと感じますし、<br>
+    ただの偶然と考えるとすごいなと感じる、ある意味色々考察できる面白い看板だなと感じました。<br>
+
+    <h2>3枚目</h2>
+    <h3>「珍しい看板」</h3>
+    <img src="../images/IMG_7162.jpg" width="30%"><br>
+    中華街に行ったところ見つけました。自分も今回の課題が無ければ何も思わない看板でした。<br>
+    私が珍しいと思った点は「お店の名前も商品の名前でもない看板」だったところです。<br>
+    実際に行ってみるとわかりますが中華街には多くの看板があり、その様子が本場の中国らしい風景となっています。<br>
+    その看板のほとんどが店名や商品名を扱っているのですがこの看板は少し違い「中華街名物・人気食べる歩き」としか書かれていないです。<br>
+    看板がありすぎてすごい目立つわけではないので人が集まるなど何かしらの効果があるかは不明ですが、<br>
+    他と違うテイストの看板だったため個人的にはすごい注目したと同時にもしかしたら気づいているのは自分だけかもと考えると少しうれしい気持ちになりました。<br>
+
+    <h2>課題を通して</h2>
+    今回の課題から身の回りを見渡す楽しさを味わうことができました。もちろん看板について色々考察するのも面白かったですが、<br>
+    いつも通りだと思っていた光景に新しい発見ができたことを嬉しく感じました。<br>
+    また周りを見渡せば面白い世界が意外と転がっているのだなということも同時に感じることができました。<br>
+
+    
+
