--- a/de12/2.html
+++ b/de12/2.html
@@ -15,6 +15,7 @@
     私がなぜこのマクドナルドの写真に注目したか。それはマクドナルドマークの横に「写真」がある点です。<br>
     あくまで個人的な考えですが、私は普通のマクドナルドマークを見るよりもセットでポテトの写真があることで購買意欲がそそられ、よりポテトを求めてしまいます。<br>
     ここから単に店の看板があるよりもプラスαで写真があることで食べているときの画が想像でき、購買意欲、食欲を向上させる効果があると発見することができました。<br>
+    10月8日・自分で撮影・家の近所のマクドナルド<br>
 
     <h2>2枚目</h2>
     <h3>「何屋さん？」</h3>
@@ -24,6 +25,7 @@
     結局正解は、「よねやざいもくてん」と読み材木店であるということが調べて分かりました。<br>
     もしかしたら自分のように何屋さんなのか分からず調べた人が多くいるかもと考えると、まんまと誘導されたなと感じますし、<br>
     ただの偶然と考えるとすごいなと感じる、ある意味色々考察できる面白い看板だなと感じました。<br>
+    10月8日・自分で撮影・家の近所<br>
 
     <h2>3枚目</h2>
     <h3>「珍しい看板」</h3>
@@ -34,6 +36,7 @@
     その看板のほとんどが店名や商品名を扱っているのですがこの看板は少し違い「中華街名物・人気食べる歩き」としか書かれていないです。<br>
     看板がありすぎてすごい目立つわけではないので人が集まるなど何かしらの効果があるかは不明ですが、<br>
     他と違うテイストの看板だったため個人的にはすごい注目したと同時にもしかしたら気づいているのは自分だけかもと考えると少しうれしい気持ちになりました。<br>
+    10月13日・自分で撮影・横浜中華街<br>
 
     <h2>課題を通して</h2>
     今回の課題から身の回りを見渡す楽しさを味わうことができました。もちろん看板について色々考察するのも面白かったですが、<br>
