--- a/de12/index.html
+++ b/de12/index.html
@@ -19,9 +19,10 @@
         </ol>
         <h2>演習ノート一覧</h2>
 <ul>
-    <li><a href="./1.html" target="_blank">第1回</a></li>
+    <li><a href="./1.html" target="_blank">Git,htmlとは</a></li>
     <li><a href="./2.html" target="_blank">路上観察</a></li>
     <li><a href="./3.html" target="_blank">定点観測</a></li>
+    <li><a href="./4.html" target="_blank">pythonゲーム</a></li>
 </ul>
     
 
