--- a/de12/index.html
+++ b/de12/index.html
@@ -23,6 +23,7 @@
     <li><a href="./2.html" target="_blank">路上観察</a></li>
     <li><a href="./3.html" target="_blank">定点観測</a></li>
     <li><a href="./4.html" target="_blank">pythonゲーム</a></li>
+    <li><a href="./5.html" target="_blank>">APIキー</a></li>
 </ul>
     
 
