--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,6 +15,7 @@
     <ul>
       <li><a href="./d.1.html" target="_blank">ピンセット</a></li>  
       <li><a href="./d.2.html" target="_blank">レーザーカット</a></li>
+      <li><a hred="./d.3.html" target="_blank">design for others</a></li>
     </ul>
 
 
