--- a/de12/index.html
+++ b/de12/index.html
@@ -24,6 +24,7 @@
     <li><a href="./3.html" target="_blank">定点観測</a></li>
     <li><a href="./4.html" target="_blank">pythonゲーム</a></li>
     <li><a href="./5.html" target="_blank>">APIキー</a></li>
+    <li><a href="./6.html" target="_blank>">データサイエンス分析</a></li>
 </ul>
     
 
