--- a/de12/index.html
+++ b/de12/index.html
@@ -25,6 +25,8 @@
     <li><a href="./4.html" target="_blank">pythonゲーム</a></li>
     <li><a href="./5.html" target="_blank>">APIキー</a></li>
     <li><a href="./6.html" target="_blank>">データサイエンス分析</a></li>
+    <li><a href="./7.html" target="_blank>">テキストマイニング</a></li>
+    
 </ul>
     
 
