--- a/digi_fab/d.3.html
+++ b/digi_fab/d.3.html
@@ -7,3 +7,6 @@
 <h2>観察課題</h2>
 <h3>「学祭で鈴木鈴木を熱く宣伝していた実行委員の方」</h3>
 <img src="../images/IMG_7279.jpg" width=30%><br>
+<h2>変更↓「電車で音漏れしていた人」</h2>
+<img src="../images/IMG_7337.jpg" width=30%><br>
+
