--- a/de12/index.html
+++ b/de12/index.html
@@ -26,7 +26,7 @@
     <li><a href="./5.html" target="_blank>">APIキー</a></li>
     <li><a href="./6.html" target="_blank>">データサイエンス分析</a></li>
     <li><a href="./7.html" target="_blank>">テキストマイニング</a></li>
-    
+    <li><a href="./8.html" target="_blank>">インタビュー</a></li>
 </ul>
     
 
