--- a/digi_fab/d.4.html
+++ b/digi_fab/d.4.html
@@ -122,13 +122,14 @@ ul{
     <div class="card">
         <h2 class="section-title">完成品・音漏れ注意の指ケース</h2>
 
-        <img src="../images/IMG_7336.jpg" width=30%><br>
+        <img src="../images/IMG_7340.jpg" width=30%><br>
         <h3 style="margin-top:1em; font-weight:600;">作品の説明</h3>
         <p>
             自分が作ったのは「音漏れ注意の指ケース」です。
             直接言えないのなら何か見せることが必要だと考え、声に出さずに済むこの作品を作りました。
             これを使うことによって座っている状況で隣の人が音漏れをしていた場合、手を見せ近づければ相手に気付かせることができます。
             また、左右の手でも使えるためどんな状況でも使うことができます。
+            （本当は「おともれ」を漢字で表記したかったが、サポートと一緒に取れてしまうため断念しました）
         </p>
     </div>
 
@@ -145,7 +146,7 @@ ul{
     <div class="card">
         <h2 class="section-title">使用素材</h2>
         <ul>
-            <li>素材 1</li>
+            <li>PLA</li>
            
         </ul>
     </div>
@@ -155,7 +156,7 @@ ul{
         <h2 class="section-title">設計の様子</h2>
 
         <div class="design-area">
-            <img src="../images/スクリーンショット 2025-12-07 154826.png" class="design-photo" alt="">
+            <img src="../images/スクリーンショット 2025-12-08 171646.png" class="design-photo" alt="">
             <img src="../images/スクリーンショット 2025-12-07 154358.png" class="design-photo" alt="">
         </div>
     </div>
@@ -167,7 +168,7 @@ ul{
         <div class="member-links">
             <a href="https://r202501907vl-jindai.github.io/xbp/digi_fab/dg4.html" class="member-link">ぶち</a>
             <a href="https://sites.google.com/view/nishikun/%E3%83%9B%E3%83%BC%E3%83%A0" class="member-link">にしくん</a>
-            <a href="URL3" class="member-link">そーいち</a>
+            <a href="https://soichi-0711.github.io/xbp/digi_fab/design%20for%20others.html" class="member-link">そーいち</a>
         </div>
     </div>
 
