--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -17,6 +17,7 @@
       <li><a href="./d.2.html" target="_blank">レーザーカット</a></li>
       <li><a href="./d.3.html" target="_blank">design for others</a></li>
       <li><a href="./d.4.html" target="_blank">design for others 作品</a></li>
+      <li><a href="./d.5.html" target="_blank">最終プロジェクト</a></li>
     </ul>
 
 
