--- a/de12/index.html
+++ b/de12/index.html
@@ -27,6 +27,7 @@
     <li><a href="./6.html" target="_blank>">データサイエンス分析</a></li>
     <li><a href="./7.html" target="_blank>">テキストマイニング</a></li>
     <li><a href="./8.html" target="_blank>">インタビュー</a></li>
+    <li><a href="./9.html" target="_blank>">任天堂スイッチ２分析</a></li>
 </ul>
     
 
